Image added and page formatted

--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="script.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
+	<div class="content">
+		<div class="image-div"></div>
 
+		<div class="form-div">
 
-	
+			<h1>This is a Sign-Up Form!!</h1>
+
+			<div class="form"></div>
+
+		</div>
+	</div>
 </body>
 </html>
