--- a/index.html
+++ b/index.html
@@ -13,9 +13,52 @@
 		<div class="form-div">
 
 			<h1>This is a Sign-Up Form!!</h1>
+			<br>
+			<div class="sign-up">Sign-Up:</div>
 
-			<div class="form"></div>
+				<form class="form">
+					<div id="first-name">
+						<label for="first_name">First Name:</label>
+						<br>
+						<input type="text" id="first_name" name="first_name" placeholder="Name..." required pattern="^[a-zA-Z]+$">
+					</div>
 
+					<div id="email">
+						<label for="email">Email:</label>
+						<br>
+						<input type="email" id="email" name="email" placeholder="Email..." required>
+					</div>
+
+					<div id="password">
+						<label for="password">Password:</label>
+						<br>
+						<input type="password" id="password" name="password" placeholder="Password...">
+					</div>
+
+					<button class="submit-button" type="submit">Submit</button>
+
+					<div id="last-name">
+						<label for="last_name">Last Name:</label>
+						<br>
+						<input type="text" id="last_name" name="last_name" placeholder="Last Name..." required>
+					</div>
+
+					<div id="tel">
+						<label for="tel">Phone Number:</label>
+						<br>
+						<input type="tel" id="tel" name="tel" placeholder="123 456 789" required pattern="[0-9]{3}\s[0-9]{3}\s[0-9]{3}">
+					</div>
+
+					<div id="confirm-password">
+						<label for="confirm-password">Confirm Password:</label>
+						<br>
+						<input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password...">
+					</div>
+
+				</form>
+				
+				<p class="log-in">Already have an account? <a href="">Log In</a></p>
+			
 		</div>
 	</div>
 </body>
