--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="content">
-		<div class="image-div"></div>
+		<div class="image-div">
+			<div class="logo-div">
+				<h1 class="logo">This is a logo!!</h1>
+			</div>
+		</div>
 
 		<div class="form-div">
 
